# SpIOpen

./: .gitignore  .gitmodules  AGENTS.md  README.md  SpIOpen.code-workspace
.cursor/plans/: frame_buffers_and_bus_queues_6cf2efcd.plan.md  spiopen_canopen_master_esp32-c3_0e424f98.plan.md
.devcontainer/: devcontainer.json  dockerfile
Libraries/SpIOpen_Broker/: .config  AGENTS.md  CMakeLists.txt  FrameBroker.md  FramePool.md  Kconfig  Lifecycle.md  README.md
Libraries/SpIOpen_Broker/include/: spiopen_broker_frame_allocator.h  spiopen_broker_frame_broker.h  spiopen_broker_frame_mailbox.h  spiopen_broker_frame_message.h  spiopen_broker_frame_pool.h  spiopen_broker_frame_publisher.h  spiopen_broker_frame_subscriber.h  spiopen_broker_lifecycle.h
Libraries/SpIOpen_Broker/src/: spiopen_broker_frame_allocator.cpp  spiopen_broker_frame_broker.cpp  spiopen_broker_frame_mailbox.cpp  spiopen_broker_frame_message.cpp  spiopen_broker_frame_pool.cpp
Libraries/SpIOpen_Broker/tests/: CMakeLists.txt  cmsis_os2_message_queue_stub.cpp  spiopen_broker_frame_allocator_tests.cpp  spiopen_broker_frame_broker_tests.cpp  spiopen_broker_frame_mailbox_tests.cpp  spiopen_broker_frame_message_tests.cpp  spiopen_broker_frame_pool_tests.cpp
Libraries/SpIOpen_Frame/: AGENTS.md  AlgorithmBackend.md  CMakeLists.txt  FrameFormat.md  Kconfig  README.md
Libraries/SpIOpen_Frame/include/: spiopen_frame.h  spiopen_frame_algorithms.h  spiopen_frame_buffer.h  spiopen_frame_format.h  spiopen_frame_parser.h  spiopen_frame_reader.h  spiopen_frame_writer.h
Libraries/SpIOpen_Frame/src/: spiopen_frame.cpp  spiopen_frame_reader.cpp  spiopen_frame_writer.cpp
Libraries/SpIOpen_Frame/src/default/: spiopen_frame_algorithms.cpp
Libraries/SpIOpen_Frame/tests/: CMakeLists.txt  spiopen_frame_algorithms_tests.cpp  spiopen_frame_buffer_tests.cpp  spiopen_frame_reader_tests.cpp  spiopen_frame_tests.cpp  spiopen_frame_writer_tests.cpp
Libraries/SpIOpen_Lifecycle/: .config  AGENTS.md  CMakeLists.txt  Kconfig  README.md
Libraries/SpIOpen_Lifecycle/include/: spiopen_lifecycle.h  spiopen_lifecycle_aggregate_component.h  spiopen_lifecycle_component.h  spiopen_lifecycle_core.h
Libraries/SpIOpen_Lifecycle/src/: spiopen_lifecycle.cpp
Libraries/SpIOpen_Lifecycle/tests/: CMakeLists.txt  spiopen_lifecycle_tests.cpp
Libraries/SpIOpen_Message/: .config  AGENTS.md  CMakeLists.txt  FrameBroker.md  FramePool.md  Kconfig  README.md  find_all_files_sorted.txt
Libraries/SpIOpen_Message/include/: spiopen_message.h  spiopen_message_allocator.h  spiopen_message_broker.h  spiopen_message_mailbox.h  spiopen_message_pool.h  spiopen_message_publisher.h  spiopen_message_subscriber.h
Libraries/SpIOpen_Message/src/: spiopen_message.cpp  spiopen_message_allocator.cpp  spiopen_message_broker.cpp  spiopen_message_mailbox.cpp  spiopen_message_pool.cpp
Libraries/SpIOpen_Message/tests/: CMakeLists.txt  cmsis_os2_message_queue_stub.cpp  spiopen_message_allocator_tests.cpp  spiopen_message_broker_tests.cpp  spiopen_message_mailbox_tests.cpp  spiopen_message_pool_tests.cpp  spiopen_message_tests.cpp
Libraries/SpIOpen_Node/: README.md
Libraries/SpIOpen_Router/: FramePool.md  FrameRouter.md  Kconfig  README.md
Libraries/SpIOpen_Router/include/: spiopen_router_frame_buffer.h  spiopen_router_frame_pool.h  spiopen_router_frame_router.h
Libraries/SpIOpen_Router/tests/: spiopen_router_frame_buffer_tests.cpp
SpIOpen/: Kconfig  README.md
SpIOpen/include/: spiopen_frame_pool.h  spiopen_router.h
docs/: Architecture.md  DevelopmentPlan.md
firmware/master/: CMakeLists.txt  README.md  pins.h
firmware/master/components/spiopen_canopen/: CMakeLists.txt
firmware/master/components/spiopen_protocol/: CMakeLists.txt
firmware/master/main/: CMakeLists.txt  CO_driver.c  frame_pool.c  frame_pool.h  main.c  spiopen_can_driver.h  spiopen_queues.c  spiopen_queues.h  spiopen_rx_slave.c  spiopen_rx_slave.h  spiopen_tx_spi.c  spiopen_tx_spi.h
firmware/master/main/canopen_config/: CO_driver_target.h
firmware/master/main/canopen_od/: OD.c  OD.h
firmware/slave/: CMakeLists.txt  CO_driver.c  FreeRTOSConfig.h  README.md  bus_queues.c  bus_queues.h  bus_rx_pio.c  bus_rx_pio.h  bus_rx_pio.pio  canopen.c  canopen_slave.h  chain_tx_spi.c  chain_tx_spi.h  chainbus_rx.c  chainbus_rx.h  chainbus_tx_spi.c  chainbus_tx_spi.h  dma_irq.c  dma_irq.h  drop_rx.c  drop_rx.h  drop_rx_pio.pio  dropbus_rx.c  dropbus_rx.h  frame_pool.c  frame_pool.h  led_rgb_pwm.c  led_rgb_pwm.h  main.c  pico_sdk_import.cmake  spiopen_can_driver.h  spiopen_slave.sln
firmware/slave/canopen_config/: CO_driver_target.h
firmware/slave/canopen_od/: OD.c  OD.h
lib/spiopen_canopen/: CMakeLists.txt  spiopen_canopen.c  spiopen_canopen.h
lib/spiopen_protocol/: CMakeLists.txt  chain_tx_frame.c  crc32.c  dlc_hamming.c  spiopen_protocol.h
tools/: README.md
